plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
}

version = project.mod_version
group = project.maven_group
base { archivesName = 'jev-npc' }

repositories { mavenCentral() }

loom {
    splitEnvironmentSourceSets()
    mods {
        jev_npc {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
    runs {
        client {
            programArg '--username'
            programArg 'NpcTester'
        }
    }
}

fabricApi {
    configureTests {
        createSourceSet = true
        modId = 'jev_npc_gametest'
        enableGameTests = true
        enableClientGameTests = false
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

processResources {
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') { expand version: project.version }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
    options.encoding = 'UTF-8'
}
java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
    withSourcesJar()
}
test { useJUnitPlatform() }

// Opt-in real-client acceptance test, excluded from the production jar.
sourceSets {
    clientValidation {
        compileClasspath += sourceSets.main.output + sourceSets.client.output + sourceSets.client.compileClasspath
        runtimeClasspath += output + compileClasspath + sourceSets.client.runtimeClasspath
    }
}
loom {
    mods {
        jev_npc_validation { sourceSet sourceSets.clientValidation }
    }
    runs {
        clientValidation {
            client()
            source sourceSets.clientValidation
            runDir 'build/client-validation'
            programArgs '--username', 'NpcValidator', '--width', '1280', '--height', '720'
        }
    }
}
tasks.named('runClientValidation') {
    doFirst {
        def destination = file('build/client-validation/config')
        destination.mkdirs()
        copy { from 'config/jev-npc.json'; into destination }
        def secret = file('run/config/jev-npc.secret.json')
        if (!secret.exists()) secret = file('config/jev-npc.secret.json')
        if (secret.exists()) {
            def target = new File(destination, secret.name)
            java.nio.file.Files.copy(secret.toPath(), target.toPath(), java.nio.file.StandardCopyOption.REPLACE_EXISTING)
            java.nio.file.Files.setPosixFilePermissions(target.toPath(), java.nio.file.attribute.PosixFilePermissions.fromString('rw-------'))
        }
        file('build/client-validation/result.txt').delete()
        (1..7).each { file("build/client-validation/screenshots/stage-${it}.png").delete() }
    }
    doLast {
        def result = file('build/client-validation/result.txt')
        def framesPresent = (1..7).every { file("build/client-validation/screenshots/stage-${it}.png").length() > 0 }
        if (!result.exists() || !result.text.startsWith('PASS\n') || !framesPresent) {
            throw new GradleException('Client acceptance failed; inspect build/client-validation/result.txt and logs/latest.log')
        }
    }
}
